--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
+	<script src="./assets/maugallery.min.js"></script>
+	<script src="./assets/scripts.min.js"></script>
 	
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@nina Carducci">
 	<meta name="twitter:creator" content="@nina Carducci">
 	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle basée à Bordeaux">
 	<meta name="twitter:description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
-
+	<meta name="twitter:image:src" content="https://pierrethinnes.github.io/NinaCarducci/assets/images/slider/1920/edward-1920.webp">
+	<meta name="twitter:image:alt" content="Couple qui s'embrasse a leurs mariage">
 
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle basée à Bordeaux">
 	<meta property="og:locale" content="fr_FR">
@@ -29,6 +31,7 @@
 	<meta property="og:url" content="https://pierrethinnes.github.io/NinaCarducci/">
 	<meta property="og:author" content="Nina Carducci">
 	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
+	<meta property="og:image" content="https://pierrethinnes.github.io/NinaCarducci/assets/images/slider/1920/edward-1920.webp">
 
 	<title>Nina Carducci photographe professionnelle basée à Bordeaux</title>
 	<meta name="description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
@@ -137,8 +140,8 @@
 					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-467.webp" width="440" height="440" alt="marié se tenant la main zoom sur les mains">
 					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-467.webp" alt="Homme fermant les yeux au soleil">
 					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-467.webp" alt="Couple marié heureux">
-					<img data-gallery-tag="Portrait" class="gallery-item" src="/assets/images/gallery/portraits/nino-van-prattenburg-467.webp" width="440" height="440" alt="portrait d'une femme deriere une cloture">
-					<img data-gallery-tag="Concert" class="gallery-item" src="/assets/images/gallery/concerts/austin-neill-467.webp" width="440" height="440" alt="Homme qui donne un concert">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-467.webp" width="440" height="440" alt="portrait d'une femme deriere une cloture">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-467.webp" width="440" height="440" alt="Homme qui donne un concert">
 					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-467.webp" width="440" height="440" alt="Femme souriant en openspace">
 				</div>
 			</div>
