--- a/index.html
+++ b/index.html
@@ -33,6 +33,46 @@
 	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
 	<meta property="og:image" content="https://pierrethinnes.github.io/NinaCarducci/assets/images/slider/1920/edward-1920.webp">
 
+	<link rel="canonnial" href="https://jonathancornic.github.io/Portfolio-nina-carducci/">
+	<meta name="robots" content="index, follow">
+
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci Photographe",
+			"image": "https://pierrethinnes.github.io/NinaCarducci/assets/images/nina.webp",
+			"@id": "https://pierrethinnes.github.io/NinaCarducci/assets/images/nina.webp",
+			"url": "https://pierrethinnes.github.io/NinaCarducci/",
+			"telephone": "05 56 67 78 89",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": 44.8465743,
+				"longitude": -0.6065366999999999
+			},
+			"openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+					"Monday",
+					"Tuesday",
+					"Wednesday",
+					"Thursday",
+					"Friday"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			}
+
+		}
+	</script>
+
 	<title>Nina Carducci photographe professionnelle basée à Bordeaux</title>
 	<meta name="description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
 </head>
